--- a/src/main/resources/templates/registration.mustache
+++ b/src/main/resources/templates/registration.mustache
@@ -5,13 +5,15 @@
     <title>Title</title>
 </head>
 <body>
-Login page
-<form action="/login" method = "post">
+Add new user
+{{#message}}
+    {{message}}
+{{/message}}
+<form action="/registration" method = "post">
     <div><label>User name: <input type="text" name = "username"/></label></div>
     <div><label>Password: <input type="password" name="password"/></label></div>
     <input type="hidden" name="_csrf" value="{{_csrf.token}}"/>
-    <div><input type="submit" value="Sign In"/></div>
+    <div><input type="submit" value="Register"/></div>
 </form>
-<a href="/registration">Add new user</a>
 </body>
 </html>
